--- a/pages/Mc09.md
+++ b/pages/Mc09.md
@@ -3,90 +3,129 @@ layout: page
 title: Mc09
 ---
 
-[<<]][[/Mc08|<]] [[/Mc10|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
-
 La trasformazione
 -----------------
 
-1 Gesù diceva: "Ascoltate bene: alcuni di voi qui non moriranno senza prima aver visto il governo di Dio[1] stabilirsi con forza".
+1 Gesù diceva: “Ascoltate bene: alcuni di voi qui non moriranno senza
+aver visto il [governo di
+Dio](../glossario.txt "glossario: governo di Dio") stabilirsi con
+forza”.
 
-2 Sei giorni dopo, Gesù si portò solo Pietro, Giacomo e Giovanni sulla cima di un monte, in un posto appartato. Gesù fu trasformato davanti ai loro occhi e i suoi vestiti diventarono bianchi splendenti, tanto da non sembrare di questa terra.
+2-4 Sei giorni dopo, Gesù partì per andare in un posto appartato sulla
+cima di una collina, portandosi solo Pietro, Giacomo e Giovanni. Davanti
+ai loro occhi Gesù fu trasformato e i suoi vestiti diventarono bianchi
+splendenti, una cosa fuori dal mondo. E apparirono Elia e Mosé che
+parlavano con Gesù.
 
-4 E apparvero Elia e Mosé che parlavano con Gesù.
+5-8 “Professore! Che spettacolo!” se ne uscì Pietro. “Potremmo costruire
+tre ripari: uno per te, uno per Mosè e uno per Elia!” Parlava così
+perché non sapeva cosa dire: erano tutti spaventati. Poi arrivò una
+nuvola che li coprì, oscurando il sole e una voce dalla nuvola disse:
+“Questo è il mio Figlio speciale: ascoltatelo!” Ad un tratto,
+guardandosi intorno, gli allievi si accorsero che con loro era rimasto
+solo Gesù.
 
-5 "Professore, è meraviglioso!" esclamò Pietro. "Facciamo qui tre ripari: uno per te, uno per Mosè e uno per Elia!"
+9-10 Mentre scendevano dalla collina, Gesù disse di non raccontare a
+nessuno quello che avevano visto, finché non fosse risuscitato dai
+morti. Loro mantennero il segreto, ma spesso ne parlavano, chiedendosi
+cosa volesse dire “risuscitato dai morti”.
 
-6 Pietro parlava così perché non sapeva cosa dire, ed erano tutti spaventati.
-
-7 Poi arrivò una nuvola che li coprì, oscurando il sole e una voce dalla nuvola disse: "Questo è il mio Figlio speciale: ascoltatelo!"
-
-8 Ad un tratto, guardandosi intorno, gli allievi si accorsero che con loro era rimasto solo Gesù.
-
-9 Mentre scendevano dal monte, Gesù disse di non raccontare a nessuno quello che avevano visto, finché non fosse risuscitato dai morti.
-
-10 Essi mantennero il segreto, ma spesso ne parlavano fra di loro, chiedendosi cosa volesse dire "Risuscitato dai morti".
-
-11 E gli chiedesero "Perché i professori di Mosé dicono che deve venire prima Elia prima del Liberatore?"
-
-12 Gesù rispose: "E' vero, prima deve venire Elia per mettere in ordine tutto; inoltre cosa è scritto del "Figlio dell'Uomo"? Che deve soffire molto ed essere disprezzato. Ma sappiate che Elia è già venuto e gli hanno fatto quello che volevano, come predissero le Scritture".
+11-13 E gli chiedesero “Perché i professori di Mosé dicono che Elia deve
+venire prima del Liberatore?” Gesù rispose: “E’ vero, prima deve venire
+Elia per mettere in ordine tutto; e cosa dice la Bibbia a proposito
+del”Figlio dell’Uomo“? Che deve soffire molto ed essere disprezzato. Ma
+sappiate che Elia è già venuto e l’hanno trattato come volevano, come
+preannunciato dalla Bibbia”.
 
 Un ragazzo posseduto
 --------------------
 
-14 Quando raggiunsero gli altri allievi, li trovarono circondati da una grande folla, e c'erano anche alcuni professori di Mosé, che discutevano con loro.
+14 Quando raggiunsero gli altri allievi, li trovarono circondati da una
+folla enorme, tra cui dei professori di Mosé che discutevano con loro.
 
-15 Mentre Gesù si avvicinava, la gente sembrava sbigottita, ma poi corse a salutarlo. "Di che state discutendo?" chiese Gesù.
+15-18 Mentre Gesù si avvicinava, la gente rimase sorpresa e poi corse a
+salutarlo. “Di che state discutendo?” chiese Gesù. Uno della folla
+rispose, “Professore, le ho portato mio figlio perché è posseduto da uno
+spirito che gli impedisce di parlare. In alcuni momenti lo prende e lo
+sbatte a terra dovunque si trova; il ragazzo diventa rigido, sbava e
+digrigna i denti. Ho chiesto ai suoi allievi di liberarlo da questo
+spirito, ma non ci sono riusciti.”
 
-17 Un uomo nella folla rispose, "Professore, le ho portato mio figlio perché è posseduto da uno spirito del male che gli impedisce di parlare.
+19-20 Gesù rispose: “Siete degli insicuri! Quanto tempo devo passare
+ancora con voi? Per quanto ancora dovrò sopportarvi? Portatemi il
+ragazzo!” Glielo portarono: quando vide Gesù, lo spirito inziò a
+scuotere il ragazzo, che, in preda alle convulsioni, cadde per terra,
+rotolando e schiumando alla bocca.
 
-18 "In alcuni momenti lo spirito lo prende e lo sbatte a terra dovunque si trova; il ragazzo diventa rigido, sbava e digrigna i denti. Ho chiesto ai suoi allievi di liberarlo da questo spirito, ma non ci sono riusciti."
+21-22 “Da quanto tempo è così?” chiese Gesù al padre. “Da quando era un
+bambinetto” rispose lui. “Spesso lo spirito ha tentato di ammazzarlo
+buttandosi nel fuoco o nell’acqua. Ti prego abbi pietà di noi e fa
+qualcosa, se puoi!”
 
-19 Gesù rispose: "Siete degli insicuri! Quanto tempo devo passare ancora con voi? Per quanto ancora dovrò sopportarvi? Portatemi il ragazzo!"
+23-24 “Se posso?” disse Gesù “Tutto è possibile per chi è convinto!” Il
+papà rispose subito: “Io ti credo, ma aiutami a superare i miei dubbi!”
 
-20 Glielo portarono: quando lo spirito vide Gesù inziò a scuotere il ragazzo, che, in preda alle convulsioni, cadde per terra, rotolando e schiumando alla bocca.
+25-27 Quando Gesù si accorse che la folla aumentava, sgridò lo spirito
+del male e disse: “Spirito sordo e muto, ti ordino di uscire da questo
+ragazzo e di non tornare mai più!” Lo spirito cacciò un urlo
+agghiacciante e di nuovo provocò le convulsioni al ragazzo, poi lo
+lasciò. Il ragazzo rimase a terra immobile, sembrava morto. La folla
+cominciò a mormorare “È morto!” Ma Gesù prese il ragazzo per mano e lo
+aiutò ad alzarsi.
 
-21 "Da quanto tempo è così?" chiese Gesù al padre. "Da quando era un bambinetto" rispose lui. "Spesso lo spirito ha tentato di ammazzarlo buttandosi nel fuoco o nell'acqua. Ti prego abbi pietà di noi e fa qualcosa, se puoi"
+28-29 Poi Gesù entro a casa di uno con gli allievi che, in privato, gli
+chiesero: “Perché noi non siamo riusciti a cacciare quello spirito?”
+Gesù rispose: “Con questo tipo di spirito, c’è un solo modo: con la
+preghiera”.
 
-23 "Se posso?" disse Gesù "Tutto è possibile per chi è convinto!"
+Grandi o piccoli?
+-----------------
 
-24 Il papà rispose subito: "Io ti credo, ma aiutami a superare i miei dubbi!"
+30-32 Lasciarono quella zona e attraversarono la Galilea, dove Gesù
+cercava di passare inosservato perché stava insegnando agli allievi.
+Diceva: “Il Prescelto di Dio sarà tradito e ucciso, ma dopo tre giorni
+tornerà in vita.” Gli allievi però, continuavano a non capire e non
+avevano nemmeno il coraggio di chiedergli spiegazioni.
 
-25 Quando Gesù si accorse che la folla aumentava, sgridò lo spirito del male e disse: "Spirito sordo e muto, ti ordino di uscire da questo ragazzo e di non tornare mai più!"
+33-34 Così arrivarono a Cafàrnao. Quando furono sistemati in casa, Gesù
+chiese: “Di cosa discutevate per strada?”. Ma gli allievi si
+vergognavano di rispondere perché avevano discusso su chi di loro fosse
+il più importante.
 
-26 Allora quello spirito cacciò un urlo agghiacciante e di nuovo provocò le convulsioni al ragazzo, poi lo lasciò. Il ragazzo rimase a terra immobile, sembrava morto. La folla cominciò a mormorare "È morto!" 27 Ma Gesù prese il ragazzo per mano e lo aiutò ad alzarsi.
+35-37 Gesù si sedette, radunò tutti e dodici intorno a sé e disse: “Chi
+vuole essere il più importante deve essere l’ultimo, il servo di tutti!”
+Fece venire un bambino che era lì, lo prese in braccio e disse: “Chi
+accoglie un piccolino come questo a nome mio, accoglierà me. E chi
+accoglie me, non riceve me, ma la persona che mi ha mandato”.
 
-28 Poi Gesù entro a casa di uno con gli allievi che, in privato, gli domandarono: "Perché noi non siamo riusciti a cacciare quello spirito?" Gesù rispose: "Con questo tipo di spirito, c'è un solo modo: con la preghiera".
+Amico o nemico?
+---------------
 
-L'importanza dei piccoli
-------------------------
+38-42 Giovanni intervenne: “Professore, abbiamo visto un signore che, a
+nome tuo, liberava gente posseduta da spiriti e gli abbiamo detto di non
+farlo, perché non appartiene al nostro gruppo.” Ma Gesù rispose:
+“Lasciatelo fare. Nessuno può fare miracoli a nome mio e subito dopo
+mettersi contro di me. Chi non è contro di noi, è con noi! Vi garantisco
+che chiunque vi darà anche solo un bicchier d’acqua, perché vi
+presentate a nome mio, verrà ricompensato adeguatamente. Ma se qualcuno
+porta fuori strada uno dei piccoli che si fidano di me, sarebbe meglio
+per lui (o lei) che fosse buttato in mare legato ad una palla di piombo.
 
-30 Lasciarono quella zona e attraversarono la Galilea, dove Gesù cercava di passare inosservato perché stava insegnando agli allievi. Diceva: "Io il Prescelto di Dio, sto per essere tradito e ucciso, ma dopo tre giorni tornerò in vita."
+43-44 “Se la tua mano fa del male, tagliala. Meglio vivere per sempre
+senza una mano che essere buttato con tutte e due nel fuoco continuo
+dell’[inferno](../glossario.txt "glossario: inferno").”
 
-32 Gli allievi però, continuavano a non capire e non avevano nemmeno il coraggio di chiedergli spiegazioni. Così arrivarono a Cafàrnao. Quando furono sistemati nella casa dove dovevano alloggiare, Gesù chiese a loro: "Di cosa discutevate per strada?".
+45-46 Se il tuo piede ti porta verso il male, taglialo. Meglio essere
+zoppo e vivere per sempre, che essere buttato nell’inferno con tutti e
+due i piedi.
 
-34 Ma gli allievi si vergognavano di rispondere perché stavano discutendo su chi di loro fosse il più importante.
+47-50 E se il tuo occhio ti fa sbagliare, cavalo. Meglio entrare con un
+occhio solo sotto il governo di Dio, che avere due occhi ed essere
+buttato nel fuoco dell’inferno dove l’anima non muore mai e il fuoco non
+si spegne, perché tutti verranno preparati con il fuoco. Il sale è
+buono, ma se diventa insipido come potete ridargli sapore? Perciò
+abbiate un forte sapore di Dio, e vivete in pace tra di voi.[^8]
 
-35 Gesù si sedette, li radunò tutti e dodici intorno a sé e disse: "Chi vuole essere il più importante deve essere l'ultimo, il servo di tutti!". E fece venire un bambino che era lì e lo prese in braccio dicendo: "Chi accoglierà a nome mio un piccolino come questo, accoglierà me. E chi accoglie me, non riceve solo me, ma anche la persona che mi ha mandato".
-
-38 Giovanni intervenne: "Professore, abbiamo visto un signore che liberava dagli spiriti a nome tuo e gli abbiamo detto di non farlo, perché non appartiene al nostro gruppo". Ma Gesù rispose: "Lasciatelo fare. Nessuno può fare miracoli a nome mio e subito dopo mettersi contro di me. 40 Chi non è contro di noi, è con noi! 41 Chiunque vi darà anche solo un bicchiere d'acqua, perché vi presentate a nome mio, vi garantisco che verrà ricompensato adeguatamente! Ma se qualcuno mina la fiducia di uno dei piccoli che si appoggiano a me, sarebbe meglio per lui (o lei) che gli legassero al collo una palla di piombo e fosse buttato in mare.
-
-43-44 "Se la tua mano fa del male, tagliala. Meglio vivere per sempre senza una mano che essere buttato con tutte e due nel fuoco inestinguibile dell'inferno."[2]
-
-45-46 Se il tuo piede ti porta verso il male, taglialo. Meglio essere zoppo e vivere per sempre, che essere buttato nell'inferno con tutti e due i piedi.
-
-47 E se il tuo occhio ti fa sbagliare, cavalo. Meglio entrare con un occhio solo nel governo di Dio, che avere due occhi ed essere buttato nel fuoco dell'inferno dove l'anima non muore mai e il fuoco non si spegne, perché tutti saranno salati con il fuoco. [3] 50 Il sale è buono, ma se diventa insipido come potete ridargli sapore? Perciò abbondate di questo sale, e vivete in pace gli uni con gli altri.
-
-[<<]][[/Mc08|<]] [[/Mc10|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
-
-Note
-----
-
-<references>
-</references>
-[Category: Marco](/Category:_Marco "wikilink")
-
-[1] [Regno di Dio](/G/Regno_di_Dio "wikilink")
-
-[2] The word translated hell is “Gehenna” (γέεννα, geenna), a Greek transliteration of the Hebrew words ge hinnom (“Valley of Hinnom”). This was the valley along the south side of Jerusalem. In OT times it was used for human sacrifices to the pagan god Molech (cf. Jer 7:31; 19:5-6; 32:35), and it came to be used as a place where human excrement and rubbish were disposed of and burned. In the intertestamental period, it came to be used symbolically as the place of divine punishment (cf. 1 En. 27:2, 90:26; 4 Ezra 7:36). This Greek term also occurs in vv. 45, 47.(NET Bible)
-
-[3] frase di difficile interpretazione
+[^8]: frasi di difficile interpretazione. Forse un riferimento alla
+    carne offerta a Dio nel Patto Antico, che si preparava con il sale
+    prima di arrostire.
