--- a/pages/Mc10.md
+++ b/pages/Mc10.md
@@ -3,86 +3,142 @@ layout: page
 title: Mc10
 ---
 
-[<<]][[/Mc09|<]] [[/Mc11|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
+Marco 10
+========
 
 Il divorzio
 -----------
 
-Poi Gesù partì (da Cafàrnao) andando verso sud, verso il confine della Giudea ad est del fiume Giordano. Ancora una volta si era raccolta attorno a lui una grande folla. E, come sempre, Gesù insegnava.
+1 Poi Gesù partì (da Cafàrnao) andando verso sud, verso il confine della
+Giudea oltre il fiume Giordano. Per l’ennesima volta fu circondato da
+una grande folla. E, come sempre, Gesù insegnava.
 
-2 Alcuni Farisei cercando di fargli un trabocchetto gli chiesero: "Secondo te, il divorzio è ammesso?" "Mosè cos'ha detto su questo tema?" ribattè Gesù.
+2-4 Alcuni Farisei, cercando di fargli un trabocchetto, gli chiesero:
+“Dio ammette il divorzio?” Gesù ribattè: “Mosè cos’ha detto su questo
+tema?” E loro: “Mosè permetteva al marito di scrivere una lettera di
+rifiuto per mandare via la propria moglie.”
 
-4 "Disse che si poteva concedere" risposero. "Mosè permetteva all'uomo di scrivere una lettera di rifiuto per mandare via la propria moglie"
+5-9 Gesù rispose: “Quella fu una concessione al vostro cuore di pietra,
+ma fin dalla creazione, Dio creò”*uomo e donna, per questo l’uomo
+lascierà suo padre e sua madre e i due si fonderanno per diventare una
+cosa sola. E quindi non sono più due ma uno.*" [^9] Per questo nessuno
+deve separare quello che Dio ha unito."
 
-5 Gesù rispose: "Quella fu una concessione al vostro cuore duro, ma fin dalla creazione, Dio creò "uomo e donna, per questo l'uomo lascierà suo padre e sua madre per unirsi alla moglie in modo così forte che non saranno più due ma una cosa sola." [1] 9 Per questo l'uomo non deve separare quello che Dio ha unito."
-
-10 Dopo, quando Gesù era rimasto in casa con gli allievi, l'argomento venne di nuovo a galla. Gesù disse: "Se un uomo divorzia da sua moglie, e sposa un'altra donna, lui la tradisce [2]. E se una moglie divorzia dal marito e si risposa anche lei lo tradisce.
+10-12 Rientrati in casa, gli allievi gli chiesero altre spiegazioni.
+Gesù disse: “Se uno divorzia da sua moglie, e sposa un’altra, lui la
+tradisce. E se una moglie divorzia dal marito e si risposa anche lei lo
+tradisce.[^10]
 
 I bambini
 ---------
 
-13 Alcune persone portarono dei bambini a Gesù per farli benedire, ma furono sgridati dagli allievi.
-
-14 Quando Gesù se ne accorse, si arrabbiò con gli allievi e disse: "Non impedite ai bambini di venire da me, perché la cittadinanza di Dio spetta a quelli come loro. Non mandateli via! Anzi, sappiate che chi non si avvicina a Dio con l'atteggiamento di un bambino, non entrerà nella sua nazione.
-
-16 Poi prese dei bambini in braccio, gli appoggiò le mani e li benedisse.
+13-16 Alcune persone portarono dei bambini a Gesù per farli benedire, ma
+furono sgridati dagli allievi. Quando Gesù se ne accorse, si arrabbiò
+con loro e disse: “Non mettevi fra me e i bambini, perché la
+cittadinanza di Dio spetta a quelli come loro. Non mandateli via! Anzi,
+sappiate che chi non accoglie Dio il Re con l’atteggiamento di un
+bambino, non entrerà nella sua nazione. Poi prese in braccio dei bambini
+, gli appoggiò le mani e recitò una
+[benedizione](../master/glossario.txt "glossario: benedizione").
 
 Il giovane ricco
 ----------------
 
-17 Mentre stava andando via, arrivò un signore correndo che si inginocchiò davanti a lui e gli chiese: "Maestro Buono, cosa devo fare per avere la vita per sempre?"
+17-20 Mentre stava andando via, arrivò di corsa un tipo che si
+inginocchiò davanti a lui e gli chiese: “Maestro Buono, cosa devo fare
+per guadagnarmi il paradiso?” “Perché mi chiami”Buono“?” disse Gesù.
+“Solo Dio è veramente Buono”. Le regole di Dio le conosci: “Non
+uccidere, non tradire il coniuge, non rubare, non raccontare bugie sul
+conto di altri, non ingannare, rispetta tuo padre e tua madre”.[^11]
+“Signor Maestro, queste regole le ho sempre rispettate, da quando ero
+ragazzo!” disse quel tipo.
 
-18 "Perché mi chiami "Buono"?" disse Gesù. "Solo Dio è veramente Buono". Conosci le regole di Dio: "Non uccidere, non tradire il coniuge, non rubare, non raccontare bugie sul conto di altri, non ingannare, rispetta tuo padre e tua madre".
+21-22 Gesù lo guardò e provando un forte affetto per lui, gli disse: “Ti
+manca solo una cosa: vai e vendi tutto quello che hai, dai il ricavato
+ai poveri e avrai un tesoro in paradiso. Poi vieni e seguimi”. Quello
+lì, sconfortato, se ne andò tutto triste perché era molto ricco.
 
-20 "Signor Capo, queste regole le ho sempre rispettate!" disse quel tipo.
+23-25 Gesù si guardò attorno e disse agli allievi: “Quanto è difficile
+per un ricco acquistare la cittadinanza di Dio!”. Questa affermazione li
+lasciò senza parole. E Gesù aggiunse: “Ragazzi, è veramente difficile
+acquistare la cittadinanza di Dio. È più facile per un cammello andare
+sulla luna, che per un ricco diventare cittadino di Dio.”
 
-21 Gesù lo guardò e provando un forte affetto per lui, gli disse: "Ti manca una cosa sola: vai e vendi tutto quello che hai, dai il ricavato ai poveri e avrai un tesoro in paradiso. Poi vieni e seguimi".
+26 Gli allievi erano stupiti e iniziarono a discutere fra di loro: “Ma
+allora chi si salverà?” Gesù li fissò e rispose: “Per gli uomini è
+impossibile, ma per Dio no: tutto è possibile per Lui.”
 
-22 Quello lì, sconfortato, se ne andò tutto triste perché era molto ricco.
-
-23 Gesù, giranando lo sguardo, disse agli allievi: "Quanto è difficile per un ricco passare sotto il governo di Dio!". Questa affermazione li lasciò senza parole. E Gesù aggiunse: "È davvero difficile acquistare la cittadinanza di Dio. È più facile per un cammello andare sulla luna, che per un ricco diventare cittadino di Dio."
-
-26 Gli allievi erano stupiti e iniziarono a discutere fra di loro: "Ma allora chi si salverà?" Gesù li fissò e rispose: "Per gli uomini è impossibile, ma per Dio no: tutto è possibile per Lui."
-
-28 Pietro cercò di rimediare, dicendo: "Noi abbiamo lasciato tutto per seguirti!" 29 Gesù rispose: "Tranquilli, vi garantisco che nessuno di quelli che hanno rinunciato a casa, fratelli, sorelle, madre, padre, figli o proprietà per seguire me e il mio messaggio non ha anche avuto in cambio cento volte tanto in case, fratelli, sorelle, madri figli e terre, e anche persecuzioni. Nel mondo futuro, poi, avrà anche la vita per sempre. Ma molti che oggi sembrano importanti, saranno gli ultimi e molti che sono gli ultimi oggi, saranno i primi.
+28-31 Pietro cercò di rimediare, dicendo: “Noi abbiamo lasciato tutto
+per seguirti!” Gesù rispose: “Tranquilli, vi garantisco che nessuno di
+quelli che hanno rinunciato a casa, fratelli, sorelle, madre, padre,
+figli o proprietà per seguire me e il mio messaggio non ha anche avuto
+in cambio cento volte tanto in case, fratelli, sorelle, madri figli e
+terre, e anche persecuzioni. Nel mondo futuro, poi, avrà anche la vita
+per sempre. Ma molti che sembrano importanti oggi, saranno gli ultimi e
+molti che sono gli ultimi oggi, saranno i primi.
 
 Chi avrà i posti migliori?
 --------------------------
 
-32 Gesù prese la strada per Gerusalemme davanti agli allievi impensieriti e altra gente intimorita. Gesù prese da parte i dodici e gli spiegò quello che gli doveva capitare.
+32 Gesù si avviò verso Gerusalemme davanti agli allievi impensieriti e
+altri seguaci impauriti. Prendendo da parte i dodici, spiegò quello che
+gli doveva capitare.
 
-33 "Stiamo andando a Gerusalemme" disse, "ed io, Uomo Figlio di Dio [3], sarò tradito e trascinato davanti a capi dei sacerdoti e i professori di Mosè[4], che mi condanneranno a morte. Poi mi consegneranno agli stranieri che mi prenderanno in giro e mi sputeranno addosso, mi frusteranno e mi uccideranno. Ma dopo tre giorni risusciterò!".
+33-34 “Stiamo andando a Gerusalemme” disse, “ed io, Uomo Figlio di
+Dio[^12], sarò tradito e trascinato davanti ai capi dei sacerdoti e i
+[professori di
+Mosè](../master/glossario.txt "glossario: legge di Mosè"), che mi
+condanneranno a morte. Poi mi consegneranno ai romani che mi prenderanno
+in giro e mi sputeranno addosso, mi frusteranno e mi uccideranno. Ma
+dopo tre giorni tornerò vivo!”.
 
-35 Giacomo e Giovanni, figli di Zebedeo, si avvicinarono a Gesù e gli dissero: "Professore, possiamo chiederti un favore?" E Gesù: "Di che tipo?" "Quando sarai sul tuo trono, vorremmo sederci sui troni vicini al tuo, uno alla tua destra e l'altro alla tua sinistra!".
+35-37 Giacomo e Giovanni, figli di Zebedeo, si avvicinarono a Gesù e gli
+dissero: “Professore, possiamo chiederti un favore?” E Gesù: “Di che
+tipo?” “Quando sarai sul tuo trono, vorremmo sederci sui troni vicini al
+tuo, uno alla tua destra e l’altro alla tua sinistra!”.
 
-38 Ma Gesù rispose: "Voi non vi rendete conto di quello che chiedete! Pensate di riuscire a bere la coppa amara che mi toccherà? O di essere immersi nella sofferenza come dovrò essere io?" Loro risposero: "Sì, ne siamo capaci!" E Gesù: "Di sicuro anche voi berrete dal mio calice e sarete immersi con la mia immersione, ma non tocca a me darvi i troni vicini al mio, perché quei posti sono già assegnati".
+38-40 Ma Gesù rispose: “Voi non vi rendete conto di quello che chiedete!
+Sarete capaci di bere la coppa amara che toccherà a me? O di essere
+immersi nella sofferenza come dovrò essere io?” Loro risposero: “Sì, ne
+siamo capaci!” E Gesù: “Di sicuro anche voi berrete dal mio calice e
+sarete immersi con la mia immersione, ma non tocca a me darvi i troni
+vicini al mio, perché quei posti sono già assegnati”.
 
-41 Quando gli altri allievi vennero a sapere quello che Giacomo e Giovanni avevano chiesto, si indignarono. Allora Gesù li chiamò e disse: "Sapete bene che i governanti e i capi comandano con il pugno di ferro, ma fra di voi è diverso. Al contrario, chi tra voi vuole essere importante deve diventare servo di tutti. 44 E chi vuole essere primo deve essere schiavo di tutti. 45 Anch'io, il Prescelto di Dio, non sono venuto qui per essere servito, ma per servire gli altri e per riscattare molti con il sacrificio della mia vita."
+41-45 Quando gli altri allievi vennero a sapere quello che Giacomo e
+Giovanni avevano chiesto, ci rimasero male. Allora Gesù li chiamò e
+disse: “Sapete bene che i governanti e i capi comandano con il pugno di
+ferro, ma fra di voi è diverso. Al contrario, chi tra voi vuole essere
+importante deve diventare servo di tutti. E chi vuole essere primo deve
+essere schiavo di tutti. Anch’io, il Prescelto di Dio, non sono venuto
+qui per essere servito, ma per servire gli altri e per riscattare molta
+gente con il sacrificio della mia vita.”
 
 Un cieco guarito
 ----------------
 
-46 Poi arrivarono a Gerico, uscirono dalla città e furono seguiti da una folla immensa. Un mendicante cieco, che si chiamava Bartimèo, figlio di Timèo, era seduto lungo la strada e chiedeva l'elemosina.
+46 Arrivati a Gèrico, uscirono dalla città e furono seguiti da una folla
+immensa. Un mendicante cieco, che si chiamava Bartimèo, figlio di Timèo,
+era seduto lungo la strada e chiedeva l’elemosina.
 
-47 Quando Bartimèo capì che Gesù di Nazaret stava per passare di lì, iniziò a gridare: "Gesù, figlio di Davide, abbi pietà di me!". 48 In molti lo sgridarono, cercando di zittirlo, ma quello gridava sempre più forte: "Figlio di Davide, abbi pietà di me!"
+47-50 Quando Bartimèo capì che Gesù di Nazaret stava per passargli
+davanti, iniziò a gridare: “Gesù, figlio dei re[^13], abbi pietà di
+me!”. Molti lo sgridarono, cercando di zittirlo, ma quello gridava
+sempre più forte: “Figlio dei re, abbi pietà di me!” Gesù si fermò e
+ordinò: “Ditegli di venire qua!”. Allora andarono a chiamare il cieco e
+gli dissero: “Coraggio, alzati, che ti vuole parlare!” Bartimèo si tolse
+la mantella, balzò in piedi e andò incontro a Gesù.
 
-29 Gesù si fermò e ordinò: "Ditegli di venire qua!". Allora andarono a chiamare il cieco e gli dissero: "Coraggio, alzati, che ti vuole parlare!" 50 Bartimèo si tolse la mantella, balzò in piedi e andò incontro a Gesù.
+51-52 “Cosa posso fare per te?” gli domandò Gesù. “Professore” disse il
+cieco “Mi faccia recuperare la vista!” Gesù gli disse: “Puoi andare, la
+tua fiducia ti ha guarito!” In quel momento recuperò la vista e seguì
+Gesù per la strada!
 
-51 "Cosa posso fare per te?" gli domandò Gesù. "Professore" disse il cieco "Fa che recuperi la vista!" 52 Gesù gli disse: "Puoi andare, la tua fiducia ti ha guarito!". In quel momento recuperò la vista e seguì Gesù per la strada!
+[^9]: Genesi 1:27; 5:2
 
-[<<]][[/Mc09|<]] [[/Mc11|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
+[^10]: vedi anche Mt 5:31-32, 19:1-12
 
-Note
-----
+[^11]: Deut 5:16-20, Es 20:12-16
 
-<references>
-</references>
-[Category: Marco](/Category:_Marco "wikilink")
+[^12]: Figlio dell’Uomo,
 
-[1] Genesi .
-
-[2] adulterio
-
-[3] Figlio dell'Uomo
-
-[4] dottori della legge
+[^13]: figlio di Davide, discendente del Re Davide
